--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,8 @@
       name="description"
       content="Filip Bodnar - Personal Website"
     />
-    <title>Filip Bodnar</title>
+    <title>Filip Bodnar - Frontend Developer</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/devicons/devicon@v2.15.1/devicon.min.css">
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
