Add favicon & Change description

--- a/public/index.html
+++ b/public/index.html
@@ -5,9 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta
       name="description"
-      content="Filip Bodnar - Personal Website"
+      content="Filip Bodnar - Frontend Developer - Personal Website"
     />
     <title>Filip Bodnar - Frontend Developer</title>
+    <link rel="icon" type="image/x-icon" href="./favicon.ico">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/devicons/devicon@v2.15.1/devicon.min.css">
   </head>
   <body>
